--- a/app/views/deals/_body_most_reviewed.html.erb
+++ b/app/views/deals/_body_most_reviewed.html.erb
@@ -10,18 +10,20 @@
 </div>
  -->
 
- <!-- <div class="filter-node promotion_box" data-filter='["Category","Promotions_Title"]'>
-  <a target="_blank" href="Promotions_URL"><img src="Image_URL" alt="Img_descriptions"></a>
+<!-- <div class="filter-node editors_box" data-filter='["CATEGORIES","PRODUCT_TITLE"]'>
+  <a target="_blank" href="MOSTREVIEW_URL"><img src="IMAGE_URL" alt="IAMGE_DESC"></a>
+  <div class="rating"><p>REVIEWS_NUMBER + Amazon Reviews</p></div>
   <div class="node-box inner">
-    <h2><a target="_blank" href="Promotions_URL">Promotions_Title</a></h2>
-    <p>Promotions_Descriptions</p>
-    <em>COUPON CODE: Promotion_Code</em><span>End Date: End_date</span>
+    <p><a target="_blank" href="MOSTREVIEW_URL">PRODUCT_TITLE</a></p>
   </div>
-  <div class="btn"><a target="_blank" href="Promotions_URL">Discover More</a></div>
-</div>
- -->
+  <div class="pricing">
+    <span>$CURRENT_PRICE</span>
+    <span class="sec_pricing"><div class="line_style">$REGULAR_PRICE</div><em>PERCENTAGE% off</em></span>
+  </div>
+  <div class="btn"><a target="_blank" href="MOSTREVIEW_URL">Shop Now</a></div>
+</div> -->
 
- <!-- Categories : coupons, sales, promotions, brands -->
+ <!-- Categories : 30k, 20k, 10k, 5k, 1k -->
  <div class="filter-node editors_box" data-filter='["30k","Crosstour Action Camera 4K 16MP WiFi Underwater 30M with Remote Control IP68 Waterproof Case"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/613OI7YttwL._SX679_.jpg" alt="Gold Box Deals"></a>
   <div class="rating"><p>30K + Amazon Reviews</p></div>
@@ -37,6 +39,7 @@
 
 <div class="filter-node editors_box" data-filter='["30k","Amazon Gold Box and Lightning Deals"]'>
   <a target="_blank" href="https://amzn.to/2Lw8uy8"><img src="https://images-na.ssl-images-amazon.com/images/I/61vwrri0ZBL._AC_SL1500_.jpg" alt="Gold Box Deals"></a>
+  <div class="rating"><p>30K + Amazon Reviews</p></div>
   <div class="node-box inner">
     <p><a target="_blank" href="https://amzn.to/2Lw8uy8">Crosstour Action Camera 4K 16MP WiF</a></p>
   </div>
