--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -47,6 +47,188 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="7.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2Kohu7v"><img src="https://m.media-amazon.com/images/I/71JyAucp5UL._SR400,400_.jpg" alt="Vitamin C Serum" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2Kohu7v">Vitamin C Serum, BREYLEE Anti-Aging Facial Serum with Hyaluronic Acid, Retinol, and Vitamin E Moisturizing Face Serum ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.49</span><span class="ori_price">$14.97</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50LQGHL3</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $14.97</strong> with promo code: <strong class="m_codes">50LQGHL3</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2Kohu7v">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="28.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YUfU1l"><img src="https://m.media-amazon.com/images/I/81S0ICWl4LL._SR400,400_.jpg" alt="VIJUVE 45% Vitamin C Serum" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YUfU1l">VIJUVE 45% Vitamin C Serum with Double Hyaluronic Acid and Collagen Peptides for Face, Eyes, Neck and Chest...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$28.00</span><span class="ori_price">$35.00</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">20ZNZCN5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $35.00</strong> with promo code: <strong class="m_codes">20ZNZCN5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 17, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YUfU1l">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="15" data-price="42.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YRTopP"><img src="https://m.media-amazon.com/images/I/81reN-IRDcL._SR400,400_.jpg" alt="Celebrity Porcelain Beauty Gold Face Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>15% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YRTopP">Celebrity Porcelain Beauty Gold Face Mask Anti Aging Deep Hydration Renew Damaged Skin Natural and Safe (5 Pieces) </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$42.49</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">15KUK3NP</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>15% off at $49.99</strong> with promo code: <strong class="m_codes">15KUK3NP</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 24, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YRTopP">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="20.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YYmzHQ"><img src="https://m.media-amazon.com/images/I/61WLy2c1rYL._SR400,400_.jpg" alt="COSMETEA Korean Essence Face Mask" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YYmzHQ">COSMETEA Korean Essence Face Mask - T4 Green Tea Soothing Ampoule Full Facial Masks 10 Pack Treatments, Care Your Skin Anti-oxidant,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.99</span><span class="ori_price">$27.99</span></address>
+      <textarea readonly="readonly" class="code_area">257USLDU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $27.99</strong> with promo code: <strong class="m_codes">257USLDU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YYmzHQ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="76.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GYE3hj"><img src="https://m.media-amazon.com/images/I/61zSlpNDbBL._SR400,400_.jpg" alt="Air Purifier - 3-in-1 HEPA Air Purifier" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GYE3hj">Air Purifier - 3-in-1 HEPA Air Purifier, Air Cleaner for Office & Large Room,Pet, Dust, Smokers, Odor Eliminator,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$76.50</span><span class="ori_price">$152.99</span></address>
+      <textarea readonly="readonly" class="code_area">508HHGZS</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $152.99</strong> with promo code: <strong class="m_codes">508HHGZS</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GYE3hj">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="20.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YUJZhs"><img src="https://m.media-amazon.com/images/I/61bH67Pa-AL._SR400,400_.jpg" alt="AINOPE Water Flosser Oral Irrigator" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YUJZhs">AINOPE Water Flosser Oral Irrigator, Wireless Charging Portable Professional Dental Water Pick Teeth Cleaner With...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$20.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">promo_code</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $39.99</strong> with promo code: <strong class="m_codes">promo_code</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YUJZhs">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="8.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31vpYQe"><img src="https://m.media-amazon.com/images/I/61q9wNbNCPL._SR400,400_.jpg" alt="DREAM PAIRS Women's Gladiator Flat Sandals" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31vpYQe">DREAM PAIRS Women's Gladiator Flat Sandals</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$8.40</span><span class="ori_price">$20.99</span></address>
+      <textarea readonly="readonly" class="code_area">60ZP7DND</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $20.99</strong> with promo code: <strong class="m_codes">60ZP7DND</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31vpYQe">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="60" data-price="24.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YBSBxX"><img src="https://m.media-amazon.com/images/I/61QouHvQH0L._SR400,400_.jpg" alt="Iron Wall Hanging..." /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YBSBxX">Iron Wall Hanging Clothes Hook Free Punching Bag Key Wall Hook no Trace Wall Hanging Wrought Iron Coat Rack White Gold M</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.00</span><span class="ori_price">$59.99</span></address>
+      <textarea readonly="readonly" class="code_area">60599YBJWQ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $59.99</strong> with promo code: <strong class="m_codes">60599YBJWQ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YBSBxX">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="43.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YFlHwD"><img src="https://m.media-amazon.com/images/I/61M7tH7OoFL._SR400,400_.jpg" alt="Wi-Fi Hidden Camera Glasses" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YFlHwD">Wi-Fi Hidden Camera Glasses 1080P Full HD Spy Camera Motion Detection Activated Real-time Video Remotely APP Viewing</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$43.99</span><span class="ori_price">$79.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">45GB77XM</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $79.99</strong> with promo code: <strong class="m_codes">45GB77XM</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 10, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YFlHwD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="20" data-price="19.19">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31xC5fl"><img src="https://m.media-amazon.com/images/I/51aItJsdCkL._SR400,400_.jpg" alt="WiFi Range Extender Wireless Network Superboost WiFi Repeater" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31xC5fl">WiFi Range Extender Wireless Network Superboost WiFi Repeater Mini Router Signal Booster Internet Access Point High...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$19.19</span><span class="ori_price">$23.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div> 
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">20EVRFSJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $23.99</strong> with promo code: <strong class="m_codes">20EVRFSJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 18, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31xC5fl">Use Code at Amazon</a></div>
+</div>
+
 <div class="card clearfix" data-score="51" data-price="19.60">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/31wp71p"><img src="https://m.media-amazon.com/images/I/61fO2DGyeOL._SR400,400_.jpg" alt="Wireless Earbuds" /></a>
