--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -191,9 +191,7 @@ header .gnb_m,header .gnb_open2{display:none;}
 }
 
 /* Deals&Gadgets sub menu */
-.sub_nav{margin-top:300px;font-family: 'Anton', sans-serif;}
-.sub_nav .sub_nav_pc{}
-.sub_nav .sub_nav_pc>ul{}
+.sub_nav{margin-top:260px;font-family: 'Anton', sans-serif;}
 .sub_nav .sub_nav_pc>ul>li{float:left;width:150px;text-align:center;}
 .sub_nav .sub_nav_pc>ul>li.coumos{width:260px;}
 .sub_nav .shoes_nav_pc{margin:0;}
@@ -338,7 +336,8 @@ header .gnb_m,header .gnb_open2{display:none;}
 .search_box{float:left;}
 .search_box input{font-size:35px;padding:10px;margin-left:20px;border:none;border-bottom:1px solid #ccc;}
 @media screen and (max-width:640px){
-  .search_box input{font-size:15px;padding:5px;margin-left:5%;}
+  .search_box{float:none;background:#000;padding:5px;}
+  .search_box input{font-size:20px;padding:5px;margin:0;width:100%;}
 }
 @media screen and (min-width:641px) and (max-width:1199px){
   .search_box input{font-size:20px;padding:5px;}
