--- a/app/assets/stylesheets/featured.css
+++ b/app/assets/stylesheets/featured.css
@@ -41,7 +41,7 @@
 
 
 /* Begin Featured Main Page */
-.featured{margin:30px 0 0 0;}
+.featured{margin:-20px 0 0 0;}
 .featured .sm_pc.on{position:fixed;top:70px;width:290px;}
 .featured .sm_pc .search_bar{position:relative;margin-top:20px;border:1px solid #ccc;}
 .featured .sm_pc .search_bar .form-control{padding:5px 0;width:80%;border:none;}
@@ -185,6 +185,7 @@
 
 /* Begin Gift Guide Main Page */
 .guide_wrap{margin:50px 0 0 0;font-family: 'Montserrat', sans-serif;} 
+.guide_wrap .mt_info{margin:-40px 0 40px 0;padding:0 10px;color:#000;}
 .guide_wrap .guide_box{float:left;width:31.33%;margin:0 1% 70px 1%;}
 .guide_wrap .guide_box .image{height:250px;}
 .guide_wrap .guide_box .image img{width:100%;height:100%;}
@@ -205,6 +206,8 @@
 .guide_wrap .guide_boxes .box_inner a p{font-size:40px;font-weight:700;padding:10px;line-height:1.1;}
 
 @media screen and (max-width:640px){
+  .guide_wrap .mt_info{margin-bottom:15px;padding:0 5px;}
+  .guide_wrap .mt_info h2{font-size:17px;}
   .guide_wrap .guide_boxes{margin:50px 0;border-bottom:1px solid #ccc;padding-bottom:30px;}
   .guide_wrap .guide_boxes .box_img{float:left;width:100%;margin:0%;}
   .guide_wrap .guide_boxes .box_inner{float:left;width:100%;margin:0%;border:5px solid;height:auto;}
