--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -6,6 +6,10 @@
   <div class="promotions editors_pick common_layout clearfix">
     <%= render 'deals/navbar_most_reviewed' %>
     <div class="filter-group guide_wrap">
+      <div class="mt_info">
+        <h2>Most-Reviewed Products On Amazon</h2>
+        <p>Amazon is one of the biggest online market places in the world. And thanks to reviews and user feedback, it's also one of the most helpful since you can see what other people have purchased and loved on the site. So we put together a list of the most popular products. It's the easiest way to find the most reviewed products.</p>
+      </div>
       <%= render 'deals/body_most_reviewed' %>
     </div><!--./filter-group-->
   </div>
