--- a/app/assets/stylesheets/gadgets.css
+++ b/app/assets/stylesheets/gadgets.css
@@ -83,7 +83,7 @@
   .on_gadgets{margin:0;width:100%;}
   .on_gadgets .card_wrap .card-header{padding:5px;}
   .on_gadgets .card_wrap .card-body{padding:10px;}
-  .on_gadgets .card_wrap .card-body h4{margin:15px 0;}
+  .on_gadgets .card_wrap .card-body h4{margin:15px 0;font-size:20px;}
   /*.on_gadgets .card_wrap .start{top:-45px;}*/
 }
 
