--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -23,7 +23,10 @@
  <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
  <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
 
- <p>run out of stock soon</p>
+ <div class="js-overlay-start start dealtube" data-url= "Youtube_URL">
+  <button><img src="<%=asset_path 'youtube_02.png' %>" alt="Play Youtube" /></button>
+  <button class="text">Play Video</button>
+</div>
 -->
 
 
@@ -46,6 +49,218 @@
   <div class="deal_btn promo_btn"><a target="_blank" href="product_link">Use Code at Amazon</a></div>
 </div>
  -->
+<div class="card clearfix" data-score="70" data-price="6.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H18541"><img src="https://m.media-amazon.com/images/I/71XmiWHK9eL._SR400,400_.jpg" alt="SOJOS Fashion Cateye Sunglasses" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H18541">SOJOS Fashion Cateye Sunglasses for Women Flat Lens SJ1070</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$6.00</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">70SJ1070</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $19.99</strong> with promo code: <strong class="m_codes">70SJ1070</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 30, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H18541">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H3alrs"><img src="https://m.media-amazon.com/images/I/41KoIAeS0RL._SR400,400_.jpg" alt="Smart Light Switch" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H3alrs">Smart Light Switch, TESSAN Smart Wifi Light Switch Compatible with Alexa, Google Home and IFTTT, No Hub Required,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.49</span><span class="ori_price">$18.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">50XK5X9W</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $18.99</strong> with promo code: <strong class="m_codes">50XK5X9W</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H3alrs">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="30" data-price="51.09">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YXivYy"><img src="https://m.media-amazon.com/images/I/71xfiEYFlnL._SR400,400_.jpg" alt="AICOK Air Purifier" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YXivYy">AICOK Air Purifier, Air Cleaner with True HEPA Filter, Ideal for Home Use, with Optional Night Light, White</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$51.09</span><span class="ori_price">$72.98</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30RZRXQU</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $72.98</strong> with promo code: <strong class="m_codes">30RZRXQU</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 20, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YXivYy">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="40" data-price="14.39">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YWXiOc"><img src="https://m.media-amazon.com/images/I/61N+zIDcveL._SR400,400_.jpg" alt="ELECJET MagJet" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>40% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YWXiOc">ELECJET MagJet, Magnetic USB C Adapter, Magsafe replacement, 6.6ft PD Type C Charging Cable Support up to ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.39</span><span class="ori_price">$23.99</span></address>
+      <textarea readonly="readonly" class="code_area">40MAGJET</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>40% off at $23.99</strong> with promo code: <strong class="m_codes">40MAGJET</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YWXiOc">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="25" data-price="29.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KtQHHd"><img src="https://m.media-amazon.com/images/I/61K9eKL7beL._SR400,400_.jpg" alt="DIKAOU Led flame table lamp" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>25% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KtQHHd">DIKAOU Led flame table lamp, Torch atmosphere Bluetooth speakers&Outdoor Portable Stereo Speaker with HD Audio and Enhanced Bass,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.99</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">25TP7AYZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>25% off at $39.99</strong> with promo code: <strong class="m_codes">25TP7AYZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KtQHHd">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="9.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GYCDTG"><img src="https://m.media-amazon.com/images/I/41j-4u-5abL._SR400,400_.jpg" alt="Wireless Earbuds Bluetooth" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GYCDTG">Wireless Earbuds Bluetooth V4.1, OUZIFISH Magnetic Metal Gold Ear Phones Noise Cancel Waterproof Wireless Ear Phones...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.00</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">703M5YKJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $29.99</strong> with promo code: <strong class="m_codes">703M5YKJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GYCDTG">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="9.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2GZZCxT"><img src="https://m.media-amazon.com/images/I/51l2hD8UQ7L._SR400,400_.jpg" alt="USB C to HDMI Cable Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2GZZCxT">USB C to HDMI Cable Adapter, YIIXIIYN Type C to HDMI 4K Digital AV Multiport Adapter with USB 3.0/USB C Charging ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$9.99</span><span class="ori_price">$19.99</span></address>
+      <textarea readonly="readonly" class="code_area">50MS9BI5</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $19.99</strong> with promo code: <strong class="m_codes">50MS9BI5</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2GZZCxT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="52" data-price="24.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/31yvJwp"><img src="https://m.media-amazon.com/images/I/613KO-P2moL._SR400,400_.jpg" alt="NPET LED UV Nail Lamp Dryer" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>52% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/31yvJwp">NPET LED UV Nail Lamp Dryer 60W for Gel Polish With 5 Timer Automatic Sensor </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.00</span><span class="ori_price">$49.99</span></address>
+      <textarea readonly="readonly" class="code_area">52IWWMWA</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>52% off at $49.99</strong> with promo code: <strong class="m_codes">52IWWMWA</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 11, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/31yvJwp">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="5.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2H2hZ5d"><img src="https://m.media-amazon.com/images/I/51nbuSGZ1eL._SR400,400_.jpg" alt="CIOR Water Shoes Men Women Aqua Shoes" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2H2hZ5d">CIOR Water Shoes Men Women Aqua Shoes Barefoot Quick-Dry Swim Shoes for Boating Walking Driving Beach Yoga</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$5.40</span><span class="ori_price">$17.99</span></address>
+      <textarea readonly="readonly" class="code_area">70B6RIQJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $17.99</strong> with promo code: <strong class="m_codes">70B6RIQJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 13, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2H2hZ5d">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="70" data-price="10.80">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/33rsOaF"><img src="https://m.media-amazon.com/images/I/61cVdmHAsRL._SR400,400_.jpg" alt="JACK SMITH Lightweight Waterproof Outdoor" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>70% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/33rsOaF">JACK SMITH Lightweight Waterproof Outdoor Rain Jacket with Hood</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.80</span><span class="ori_price">$35.99</span></address>
+      <textarea readonly="readonly" class="code_area">70DGS7QT</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>70% off at $35.99</strong> with promo code: <strong class="m_codes">70DGS7QT</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 15, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/33rsOaF">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="45" data-price="47.35">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2KFuowZ"><img src="https://m.media-amazon.com/images/I/61RD3X4Y88L._SR400,400_.jpg" alt="Mini Projector" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2KFuowZ">Mini Projector, 1080P HD Supported Portable Video Projector with 30000H Lamp, Compatible with TV Stick, HDMI, USB ...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$47.35</span><span class="ori_price">$86.09</span></address>
+      <textarea readonly="readonly" class="code_area">43PYPROJ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $86.09</strong> with promo code: <strong class="m_codes">43PYPROJ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 14, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2KFuowZ">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="10.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2YEOLEw"><img src="https://m.media-amazon.com/images/I/71uxkRV50fL._SR400,400_.jpg" alt="KINGBERWI Leather Car Trash Can" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2YEOLEw">KINGBERWI Leather Car Trash Can Hanging Luxury Car Garbage Bag Auto Trash Container, Black</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.99</span><span class="ori_price">$21.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div> 
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">508IFCIV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $21.99</strong> with promo code: <strong class="m_codes">508IFCIV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 22, 2019 at 11:59 PM PDT</span><%= render 'deals/notes' %>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2YEOLEw">Use Code at Amazon</a></div>
+</div>
 
 <div class="card clearfix" data-score="80" data-price="5.00">
   <div class="image_box">
