--- a/app/views/gadgets/show.html.erb
+++ b/app/views/gadgets/show.html.erb
@@ -1,12 +1,5 @@
 <!-- for play youtube video-->
-<div class="overlay-video">
-  <div class="videoWrapperExt">
-    <div class="videoWrapper">
-      <div class="video_close"></div>
-      <iframe id="player" src="" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </div>        
-</div>
+<%= render 'shared/play_video' %>
 
 <div class="layout">
   <%= render 'shared/header_short' %>
