--- a/app/views/home/index_02.html.erb
+++ b/app/views/home/index_02.html.erb
@@ -3,14 +3,7 @@
     <%= render 'shared/header' %>
     
     <!-- for play youtube video-->
-    <div class="overlay-video">
-      <div class="videoWrapperExt">
-        <div class="videoWrapper">
-          <div class="video_close"></div>
-          <iframe id="player" src="" frameborder="0" allowfullscreen></iframe>
-        </div>
-      </div>        
-    </div>
+    <%= render 'shared/play_video' %>
 
     <div class="gadgets">
       <div class="wrap">
