--- a/app/assets/stylesheets/deals.css.erb
+++ b/app/assets/stylesheets/deals.css.erb
@@ -51,6 +51,10 @@
   .codes .card_wrap .card .image_box .rating{}
   .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;}
   .codes .card_wrap .card .image_box .rating p{margin-left:2%;font-size:13px;}
+  .codes .card_wrap .card .image_box .dealtube{background:#000;height:25px;border-radius:10px;font-family:'Montserrat', sans-serif;text-align:center;}
+  .codes .card_wrap .card .image_box .dealtube button{vertical-align:middle;}
+  .codes .card_wrap .card .image_box .dealtube button.text{color:#fff;margin-top:-3.5px;font-weight:bold;}
+  .codes .card_wrap .card .image_box .dealtube img{width:25px;height:25px;margin-left:-3px;}
   .codes .card_wrap .card .inner{font-family: 'Montserrat', sans-serif;font-weight:400;border-right:1px solid #ccc;border-left:1px solid #ccc;float:left;width:57%;padding:1.5%;}
   .codes .card_wrap .card .inner>.regular{color:#000;font-size:17px;border-bottom:2px solid #000;}
   .codes .card_wrap .card .inner>.regular>em{background:#000;padding:0 5px;color:#fff;}
@@ -132,11 +136,14 @@
  
   .codes .card_wrap{/*column-width:170px;*/column-gap:5px;column-count:1;}
   .codes .card_wrap .card{display:inline-block;margin:0;margin-bottom:30px;padding:5px;border-bottom:1px solid #ddd;}
-  .codes .card_wrap .card .image_box{text-align:center;}
+  .codes .card_wrap .card .image_box{text-align:center;position:relative;}
   .codes .card_wrap .card .image_box img{width:70%;height:200px;object-fit:contain;}
   .codes .card_wrap .card .image_box .rating{}
   .codes .card_wrap .card .image_box .rating img{width:100px;height:22px;margin-bottom:0;}
   .codes .card_wrap .card .image_box .rating p{margin-bottom:50px;}
+  .codes .card_wrap .card .image_box .dealtube img{width:45px;height:45px;position:absolute;bottom:0;left:0;}
+  .codes .card_wrap .card .image_box .dealtube button.text{display:none;}
+
   .codes .card_wrap .card .inner{padding:7px;font-family: 'Montserrat', sans-serif;font-weight:400}
   .codes .card_wrap .card .inner_top{margin-top:50px;}
   .codes .card_wrap .card .inner>.regular{font-size:13px;border-bottom:2px solid #000;}
