--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -1,3 +1,6 @@
+<!-- for play youtube video-->
+<%= render 'shared/play_video' %>
+
 <div class="layout"><!--layout-->
   <div class="wrap">  
   <%= render 'shared/header' %>
