--- a/app/views/deals/bestdeals.html.erb
+++ b/app/views/deals/bestdeals.html.erb
@@ -69,7 +69,7 @@
       </div><!--./lt_cnt-->
       
       <div class="rt_cnt">
-        <h2>Daily Deals | Hand-Pick On Amazon Aug. 11. 2019.</h2>
+        <h2>Daily Deals | Hand-Pick On Amazon Aug. 12. 2019.</h2>
         
         <div class="sort_box clearfix">
           <!-- <div class="deals_des">We pick the best deals from all categories of Amazon!! We just hope you like it :D</div> -->
@@ -86,14 +86,14 @@
           <%= render 'shared/amz_search' %>
           <%= render 'deals/body_bestdeals' %>
         </div>
-        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_04">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
+        <p class="updating">We are still updating the best deals... :D <a href="/deals_days/day_05">GO TO THE BEST DEALS OF YESTERDAY</a></h2>
         
         
       </div><!--./rt_cnt-->    
 
     
     </div><!--./codes-->
-    <!-- <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button> -->
+    <button id='goup'><img src="<%=asset_path 'goup.png' %>"></button>
   </div><!--./warp-->
 </div><!--./layout-->
 <script>
